--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,57 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+## ARGIS /GIS 
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+data/*
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.project
+.classpath
+.settings
+.metadata
+.buildpath
+.vscode
+Servers
+.chef
+.vs
+
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
